スピーカーの細かい詳細を追加した

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                         <div class="speaker">
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>1人目: 未定</h4>
-                                <p>1人目のプロフィール</p>
+                                <h4>1人目: 水野　典子</h4>
+                                <p>47歳：主婦の傍らシステムエンジニアでGitHubを猛勉強中</p>
                             </div>
                         </div>
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>2人目: 未定</h4>
-                                <p>2人目のプロフィール</p>
+                                <h4>2人目: 花火師・花火　太郎</h4>
+                                <p>花火大会の為に花火を作り続けて30年<br>花火には拘りがある職人</p>
                             </div>
                         </div>
                     </article>
