花火師を辞め、MicrosoftのGitHub担当をcallしました

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>2人目: 花火師・花火　太郎</h4>
-                                <p>花火大会の為に花火を作り続けて30年<br>花火には拘りがある職人</p>
+                                <h4>2人目: Microsoft・マイクロ　太郎</h4>
+                                <p>GitHubを買収して30年<br>VSSは不人気だった。</p>
                             </div>
                         </div>
                     </article>
