--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>2人目: Microsoft・マイクロ　太郎</h4>
-                                <p>GitHubを買収して30年<br>VSSは不人気だった。</p>
+                                <h4>2人目: 坪井 大輔</h4>
+                                <p>著書：WHY BLOCKCHAIN なぜ、ブロックチェーンなのか?</p>
                             </div>
                         </div>
                     </article>
