--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <html>
 <head>
     <title>Ichiyasa Git User Group</title>
-    <meta charset="utf-8"/>
+    <meta charset="utf-16"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
 </head>
+<!--test-->
 <body>
 
 <!-- Header -->
